[tool.poetry]
name = "genomeanonymizer"
version = "0.1.0"
description = ""
authors = ["Nicolas Gaitan <ngaitan55@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pysam = "^0.22.0"
variant-extractor = "^4.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
