[tool.poetry]
name = "GenomeAnonymizer"
version = "0.0.1"
description = ""
authors = ["Nicolas Gaitan <ngaitan55@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pysam = "^0.22.0"
variant-extractor = "^4.0.6"
psutil = "^5.9.8"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
genome_anonymizer = "src.GenomeAnonymizer.genome_anonymizer:run_anonymizer"



